public/vocables/modules/shared/styles.less
@import (less) "../../modules/tools/KGquery/css/KGquerySkin.css";

@import (less) "../../modules/tools/lineage/css/lineageSkin.css";

@import (css) "../../modules/uiWidgets/css/Sourceselector.css";
@import (less) "../../modules/uiWidgets/css/PopUp.css";
@import (less) "../../modules/uiWidgets/css/NodesInfos.css";
@import (less) "../../icons/icons.css";
@import (less) "../../modules/uiWidgets/css/Bot.css";

@import (less) "../../modules/tools/KGcreator/css/KGcreatorSkin.css";

/* variables */
@font-family-theme: Helvetica, sans-serif;
@padding-button-classic: 8px 24px;
@font-size-title-big: 20px;
@font-size-title-classic: 18px;
@font-size-button: 15px;
@font-size-button-small: 14px;
@font-size-text: 10px;
@border-radius-simple: 14px;
@margin-small: 3px;

/* end variables*/

/* Variable theme Color */
/* Default theme */
@source-color: #0767b7;
@button1-color: #003366;
@button2-color: #434e8c;
@button3-color: #6b77e5;
@legend-color: #7da6de;
@background-color: #f4f4f4;
@dark-background-color: #e4e4e4;
@isGradient: false;
@border-color: @button1-color;

/* defaults icons */
@add-icon: "../../icons/CommonIcons/add-icon.png";
@filterIcon: "../../icons/CommonIcons/Filtre.png";
@slsvLogo-icon: "../../icons/CommonIcons/slsvLogo.png";
@arrow-icon: "../../icons/KGA/caret-right-KGA.png";
@search-icon: "../../icons/KGA/SearchIcon-KGA.png";

@moreOptions-icon: "../../icons/KGA/MoreOptionsIcon-KGA.png";
@lineage-logo: "../../icons/KGA/lineageLogo-KGA.png";
@KGquery-logo: "../../icons/KGA/Kgquery-KGA.png";
@MappingModeler-logo: "../../icons/KGA/Kgcreator-KGA.png";
@KGcreator-logo: "../../icons/KGA/Kgcreator-KGA.png";
@SPARQL-logo: "../../icons/KGA/SPARQL-KGA.png";
@admin-logo: "../../icons/KGA/Admin-KGA.png";
@ConfigEditor-logo: "../../icons/KGA/ConfigEditor-KGA.png";
@GraphManagement-logo: "../../icons/KGA/Graphmanagement-KGA.png";
@OntoCreator-logo: "../../icons/KGA/OntoCreator-KGA.png";
@TimeLine-logo: "../../icons/KGA/TimeLine-KGA.png";
@logoInstance-icon: "../../icons/KGA/KGALogo.png";

@saveIcon: "../../icons/KGA/SaveIcon-KGA.png";
@deleteIcon: "../../icons/KGA/DeleteIcon-KGA.png";

@allPropertyIcon: "../../icons/BluishVioletTheme/SelectionAllIcon-bluishViolet.png";
@currentPropertyIcon: "../../icons/BluishVioletTheme/SelectionIcon-bluishViolet.png";
@jqueryClose: "../../icons/KGA/CrossIcon-KGA.png";
@resetIcon: "../../icons/KGA/ResetIcon-KGA.png";
@previousIcon: "../../icons/KGA/PreviousIcon-KGA.png";
@isDarkTheme: false;
@whiteBoardIcon: "../../icons/KGA/WhiteboardIcon-KGA.png";
@propertiesIcon: "../../icons/KGA/propertiesIcon-KGA.png";
@containersIcon: "../../icons/KGA/ContainerIcon-KGA.png";
@classesIcon: "../../icons/KGA/classesIcon-KGA.png";
@queryIcon: "../../icons/KGA/SPARQL-KGA.png";

html {
    color: if((@isDarkTheme=true), white, black);
}
.vis-network {
    background-color: if((@isDarkTheme=true), black, white);
}
.lateralPanelSection-width {
    width: 89%;
}
.font-button1-color {
    color: @button1-color;
}
.font-button2-color {
    color: @button2-color;
}
.font-button3-color {
    color: @button3-color;
}
.font-lengend-color {
    color: @legend-color;
}
.select-bar-theme1 {
    padding: 2px;
    color: @button1-color;
    border-radius: 14px;
}
.select-bar-theme2 {
    padding: 2px;
    color: @button2-color;
    border-radius: 14px;
}
.select-bar-theme3 {
    padding: 2px;
    color: @button3-color;
    border-radius: 14px;
}
.border-classic-color-theme1 {
    border-radius: 14px;
    border: @button1-color solid 1px;
}
.border-without-raduis-theme1 {
    border: @button1-color solid 1px;
}
.border-classic-color-theme2 {
    border-radius: 14px;
    border: @button2-color solid 1px;
}
.border-classic-color-theme3 {
    border-radius: 14px;
    border: @button3-color solid 1px !important;
}
.border-classic-color-theme4 {
    border-radius: 14px;
    border: @source-color solid 1px;
}
.border-none {
    border-radius: 14px;
    border: 0px;
}

.source-border {
    .border-classic-color-theme1;
    padding: 7px;
}
.small-font {
    font-family: @font-family-theme;
    font-size: @font-size-button-small;
}
.classic-font-title {
    font-family: @font-family-theme;
    font-size: @font-size-title-classic;
    font-weight: bold;
}
.big-font-title {
    font-size: @font-size-title-big;
    font-family: @font-family-theme;
    font-weight: bold;
}
.button-font {
    color: white;
    font-family: @font-family-theme;
    font-size: @font-size-button;
    background-color: @source-color;
}
.button-font-uncolor {
    color: white;
    font-family: @font-family-theme;
    font-size: @font-size-button;
}
.button-font-color-button1 {
    .button-font-uncolor;
    color: @button1-color;
}
.button-font-uncolor-small {
    .button-font-uncolor;
    font-size: @font-size-button-small;
}
.button-font-title {
    font-family: @font-family-theme;
    font-size: @font-size-button;
    font-weight: bold;
    background-color: @dark-background-color;
    color: @button1-color !important;
}
.font-table {
    font-size: @font-size-button-small;
    font-family: @font-family-theme;
    color: @button1-color;
    padding: 8px 24px;
    border: @source-color solid 1px !important;
}

.slsv-general-buttons {
    .border-classic-color-theme4;
    .button-font;
}
.slsv-invisible-button {
    .button-font;
    color: @source-color;
    background-color: inherit;
    border: 0px;
}
.slsv-invisible-button:hover {
    background-color: unset !important;
}
.slsv-whiteboard-buttons {
    .button-font-uncolor-small;
    padding: 8px 12px;
    .border-none;
    margin: 2px;
    margin-top: 8px;
}
.hover-button {
    //background-color:unset !important;
    opacity: 70%;
    //color: @source-color !important;
}
.hover-button-transparent {
    background-color: unset !important;
}
.SearchButtonIcon {
    background-color: @dark-background-color;
}

.size-of-button-small {
    padding: 7px 10px !important;
}
.size-of-button-null {
    padding: 0px 0px !important;
}
/*  End Common themes  */

/* source Label Div */

/* Class Specific to some component interactions in SLSV */

.w3-container {
    padding: 0%;
    padding-top: 0px;
}

.w3-panel {
    margin-top: 7%;
}

.lineage-tab {
    padding-left: 10px;
}
.messageDiv {
    font-size: 14px;
    font-family: Helvetica, sans-serif;
    color: @source-color;
}
#SouslesensVocables_Github {
    color: @source-color;
}
.mb-3 {
    margin-bottom: 0px !important;
}

.ui-dialog .ui-dialog-content {
    overflow: hidden;
    box-sizing: border-box;
}

#toolsSelect > div {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.2em;
}

#toolsSelect > div > div:first-child {
    width: 37px;
    height: 35px;
}

.ui-front {
    z-index: auto;
}
// CONFIG editor colors

path {
    color: inherit;
}

.ui-widget-content a {
    color: unset;
}
#KGcreator_infosDiv {
    color: black;
}
pre {
    overflow: unset;
}

// Common icons (not in icons.css to not change them on themeChange)
.add-icon {
    background-image: url(@add-icon);
    background-repeat: no-repeat;
}
.filterIcon {
    background-image: url(@filterIcon);
    background-repeat: no-repeat;
    height: 20px;
    width: 20px;
}
.slsvLogo-icon {
    background-image: url(@slsvLogo-icon);
    background-repeat: no-repeat;
}

.searchButton {
    width: 200px;
    height: 33.5px;
    border-bottom-left-radius: 14px;
    border-top-left-radius: 14px;
}

